--- a/src/SelectBar.css
+++ b/src/SelectBar.css
@@ -1,8 +1,7 @@
 
 .selectbar_background {
-    width: 160px;
-    height: 100vh;
-    margin: 10px 0;
+    width: 280px;
+    height: 100%;
 
     /*background: #e0e5ec;*/
 
@@ -17,7 +16,7 @@ button {
 }
 
 .custom-btn {
-    width: 120px;
+    width: 240px;
     height: 40px;
     /*padding: 10px 25px;*/
     border: 2px solid #000;
@@ -55,3 +54,4 @@ button {
     transform: scale(1);
     /*opacity: 0.5;*/
 }
+
